--- a/Trabalho2/Makefile
+++ b/Trabalho2/Makefile
@@ -1,5 +1,5 @@
 test:
-	gcc -g -lm -lcmocka -Wall -Wextra $(wildcard tests/*.c) $(filter-out src/main.c, $(wildcard src/*.c)) -o test.out
+	gcc -g -lcmocka -Wall -Wextra $(wildcard tests/*.c) $(filter-out src/main.c, $(wildcard src/*.c)) -o test.out
 
 run:
-	gcc -lm -g -Wall -Wextra $(wildcard src/*.c) -o main.out
+	gcc -g -Wall -Wextra $(wildcard src/*.c) -o main.out
