--- a/Trabalho2/Makefile
+++ b/Trabalho2/Makefile
@@ -1,2 +1,5 @@
 run:
 	gcc -g -Wall -Wextra $(wildcard src/*.c) -o main.out
+
+test:
+	gcc -g -lcmocka -Wall -Wextra $(wildcard tests/*.c) $(filter-out src/main.c, $(wildcard src/*.c)) -o test.out
